# yalong_demo

./: README.md
YaLongR8/: start
YaLongR8/devel/: .catkin  .rosinstall  setup.sh
YaLongR8/devel/include/astra_camera/: AstraConfig.h
YaLongR8/devel/include/robot_package/: Claw.h  ClawRequest.h  ClawResponse.h  ImageToFrame.h  ImageToFrameRequest.h  ImageToFrameResponse.h  MoveABSJ.h  MoveABSJAction.h  MoveABSJActionFeedback.h  MoveABSJActionGoal.h  MoveABSJActionResult.h  MoveABSJFeedback.h  MoveABSJGoal.h  MoveABSJRequest.h  MoveABSJResponse.h  MoveABSJResult.h  MoveJ.h  MoveJRequest.h  MoveJResponse.h  MoveL.h  MoveLRequest.h  MoveLResponse.h  Servo.h  ServoRequest.h  ServoResponse.h  TR_Arm_Msg.h  TR_Vehicle_IMU_Msg.h  TR_Vehicle_Msg.h  VehicleCommModel.h  VehicleCommModelRequest.h  VehicleCommModelResponse.h  VehicleControl.h  VehicleControlRequest.h  VehicleControlResponse.h  VehicleServo.h  VehicleServoRequest.h  VehicleServoResponse.h
YaLongR8/devel/lib/astra_camera/: astra_camera_node  list_devices_node
YaLongR8/devel/lib/hipnuc_imu/: hipnuc_imu_msg  sub_spec
YaLongR8/devel/lib/pkgconfig/: astra_camera.pc  hipnuc_imu.pc  hipnuc_lib_package.pc  robot_package.pc  start_game.pc  ydlidar_ros_driver.pc
YaLongR8/devel/lib/python2.7/dist-packages/astra_camera/cfg/: AstraConfig.py
YaLongR8/devel/lib/python2.7/dist-packages/robot_package/msg/: _MoveABSJAction.py  _MoveABSJActionFeedback.py  _MoveABSJActionGoal.py  _MoveABSJActionResult.py  _MoveABSJFeedback.py  _MoveABSJGoal.py  _MoveABSJResult.py  _TR_Arm_Msg.py  _TR_Vehicle_IMU_Msg.py  _TR_Vehicle_Msg.py  __init__.py
YaLongR8/devel/lib/python2.7/dist-packages/robot_package/srv/: _Claw.py  _ImageToFrame.py  _MoveABSJ.py  _MoveJ.py  _MoveL.py  _Servo.py  _VehicleCommModel.py  _VehicleControl.py  _VehicleServo.py  __init__.py
YaLongR8/devel/lib/robot_package/: eye_hand_calibration  robotic_node
YaLongR8/devel/lib/ydlidar_ros_driver/: ydlidar_ros_driver_node
YaLongR8/devel/share/astra_camera/cmake/: astra_camera-msg-extras.cmake  astra_camera-msg-paths.cmake  astra_cameraConfig.cmake
YaLongR8/devel/share/astra_camera/docs/: AstraConfig-usage.dox  AstraConfig.dox  AstraConfig.wikidoc
YaLongR8/devel/share/common-lisp/ros/robot_package/msg/: MoveABSJAction.lisp  MoveABSJActionFeedback.lisp  MoveABSJActionGoal.lisp  MoveABSJActionResult.lisp  MoveABSJFeedback.lisp  MoveABSJGoal.lisp  MoveABSJResult.lisp  TR_Arm_Msg.lisp  TR_Vehicle_IMU_Msg.lisp  TR_Vehicle_Msg.lisp  _package.lisp  _package_MoveABSJAction.lisp  _package_MoveABSJActionFeedback.lisp  _package_MoveABSJActionGoal.lisp  _package_MoveABSJActionResult.lisp  _package_MoveABSJFeedback.lisp  _package_MoveABSJGoal.lisp  _package_MoveABSJResult.lisp  _package_TR_Arm_Msg.lisp  _package_TR_Vehicle_IMU_Msg.lisp  _package_TR_Vehicle_Msg.lisp  robot_package-msg.asd
YaLongR8/devel/share/common-lisp/ros/robot_package/srv/: Claw.lisp  ImageToFrame.lisp  MoveABSJ.lisp  MoveJ.lisp  MoveL.lisp  Servo.lisp  VehicleCommModel.lisp  VehicleControl.lisp  VehicleServo.lisp  _package.lisp  _package_Claw.lisp  _package_ImageToFrame.lisp  _package_MoveABSJ.lisp  _package_MoveJ.lisp  _package_Servo.lisp  _package_VehicleCommModel.lisp  _package_VehicleControl.lisp  _package_VehicleServo.lisp  robot_package-srv.asd
YaLongR8/devel/share/gennodejs/ros/astra_camera/srv/: _index.js
YaLongR8/devel/share/gennodejs/ros/robot_package/msg/: MoveABSJAction.js  MoveABSJActionFeedback.js  MoveABSJActionGoal.js  MoveABSJActionResult.js  MoveABSJFeedback.js  MoveABSJGoal.js  MoveABSJResult.js  TR_Arm_Msg.js  TR_Vehicle_IMU_Msg.js  TR_Vehicle_Msg.js  _index.js
YaLongR8/devel/share/gennodejs/ros/robot_package/srv/: Claw.js  ImageToFrame.js  MoveABSJ.js  MoveJ.js  MoveL.js  Servo.js  VehicleCommModel.js  VehicleControl.js  VehicleServo.js  _index.js
YaLongR8/devel/share/hipnuc_imu/cmake/: hipnuc_imu-msg-extras.cmake  hipnuc_imu-msg-paths.cmake  hipnuc_imuConfig.cmake
YaLongR8/devel/share/hipnuc_lib_package/cmake/: hipnuc_lib_packageConfig.cmake
YaLongR8/devel/share/robot_package/cmake/: robot_package-msg-paths.cmake  robot_packageConfig.cmake
YaLongR8/devel/share/robot_package/msg/: MoveABSJAction.msg  MoveABSJActionFeedback.msg  MoveABSJActionGoal.msg  MoveABSJActionResult.msg  MoveABSJFeedback.msg  MoveABSJGoal.msg  MoveABSJResult.msg
YaLongR8/devel/share/roseus/ros/astra_camera/: manifest.l
YaLongR8/devel/share/roseus/ros/hipnuc_imu/: manifest.l
YaLongR8/devel/share/roseus/ros/robot_package/: manifest.l
YaLongR8/devel/share/roseus/ros/robot_package/msg/: MoveABSJAction.l  MoveABSJActionFeedback.l  MoveABSJActionGoal.l  MoveABSJActionResult.l  MoveABSJFeedback.l  MoveABSJGoal.l  (+4 more)
YaLongR8/devel/share/start_game/cmake/: start_gameConfig.cmake
YaLongR8/devel/share/ydlidar_ros_driver/cmake/: ydlidar_ros_driverConfig.cmake
YaLongR8/src/bringup/RobotConSys_SDK/RobotConSys_SDK/: README.md
YaLongR8/src/bringup/RobotConSys_SDK/RobotConSys_SDK/cs/: RobSoft.cs  RobotConSys.cs  RobotConSysStruct.cs
YaLongR8/src/bringup/RobotConSys_SDK/RobotConSys_SDK/example/: CMakeLists.txt  CamDevDemo.cpp  RobotConSysDemo.cpp  platform.cmake
YaLongR8/src/bringup/hipnuc_lib_package/src/: nmea_decode.c
YaLongR8/src/bringup/robot_package/: CMakeLists.txt  package.xml
YaLongR8/src/bringup/robot_package/include/robot_package/: chess_board_detector.hpp  loard_library.h  robotic_man.h
YaLongR8/src/bringup/robot_package/launch/: robot_start.launch
YaLongR8/src/bringup/robot_package/msg/: TR_Arm_Msg.msg  TR_Vehicle_IMU_Msg.msg  TR_Vehicle_Msg.msg
YaLongR8/src/bringup/robot_package/src/: eye_in_hand.cpp  loard_library.cpp  robotic_man.cpp  robotic_node.cpp
YaLongR8/src/bringup/robot_package/srv/: Claw.srv  ImageToFrame.srv  MoveABSJ.srv  MoveL.srv  Servo.srv  VehicleCommModel.srv  VehicleControl.srv  VehicleServo.srv
YaLongR8/src/bringup/start_game/: CMakeLists.txt
YaLongR8/src/bringup/start_game/scripts/: start.py  start.py.back  start2.py
YaLongR8/src/bringup/ydlidar_ros_driver/launch/: TR_lidar.launch
YaLongR8/src/bringup/ydlidar_ros_driver/src/: ydlidar_ros_driver.cpp
(+84 files in other folders)
